chore(ci): Run concrete-ml-test for each PR that modify concrete-python or main push

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -251,6 +251,16 @@ jobs:
     secrets: inherit
 
 #################################################
+# Concrete-ML tests #############################
+  concrete-ml-tests-linux:
+    needs: file-change
+    if: needs.file-change.outputs.concrete-python == 'true' || needs.file-change.outputs.push-main
+    uses: ./.github/workflows/start_slab.yml
+    secrets: inherit
+    with:
+      command: ml-test
+
+#################################################
 # Release jobs #################################
   concrete-python-nightly-release:
     if: ${{ github.event_name == 'schedule' }}
