--- a/ci/slab.toml
+++ b/ci/slab.toml
@@ -108,5 +108,5 @@ check_run_name = "Concrete Python Release"
 
 [command.concrete-python-release-gpu]
 workflow = "concrete_python_release_gpu.yml"
-profile = "gpu-test"
+profile = "m7i-cpu-test"
 check_run_name = "Concrete Python Release (GPU)"
