--- a/.github/workflows/concrete_python_release_gpu.yml
+++ b/.github/workflows/concrete_python_release_gpu.yml
@@ -117,6 +117,19 @@ jobs:
             
             deactivate
 
+      - name: fix node
+        run: |
+          cat /etc/issue
+          sudo apt-get remove -y nodejs
+          sudo apt-get remove -y npm
+          curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.2/install.sh | bash
+          chmod +x ~/.nvm/nvm.sh
+          source ~/.bashrc
+          nvm install 16
+          node -v
+
+
+
       - name: Upload wheel
         uses: actions/upload-artifact@v4
         with:
