--- a/.github/workflows/concrete_python_release_gpu.yml
+++ b/.github/workflows/concrete_python_release_gpu.yml
@@ -124,6 +124,8 @@ jobs:
           sudo apt-get remove -y npm
           curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.2/install.sh | bash
           chmod +x ~/.nvm/nvm.sh
+          export NVM_DIR="~/.nvm"
+          [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
           source ~/.bashrc
           nvm install 16
           node -v
