--- a/.github/workflows/concrete_python_release_gpu.yml
+++ b/.github/workflows/concrete_python_release_gpu.yml
@@ -57,7 +57,7 @@ jobs:
           sudo apt-get remove -y nodejs
           sudo apt-get remove -y npm
           curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.2/install.sh | bash
-          export NVM_DIR="~/.nvm"
+          export NVM_DIR="/home/ubuntu/.nvm"
           ls -R $NVM_DIR/
           chmod +x $NVM_DIR/nvm.sh
           source $NVM_DIR/nvm.sh
