fix(ci): run all tests but still show error status if one failed

--- a/.github/workflows/concrete_python_test_gpu_wheel.yml
+++ b/.github/workflows/concrete_python_test_gpu_wheel.yml
@@ -28,10 +28,10 @@ env:
 
 jobs:
   test-linux-x86:
-    continue-on-error: true
     strategy:
       matrix:
         python-version: ["3.8", "3.9", "3.10", "3.11"]
+      fail-fast: false
     runs-on: ${{ github.event.inputs.runner_name }}
     steps:
       - name: Setup Python
