fix(ci): build compiler image with cuda11.8
previous version was not working properly (too recent). So we switched
to 11.8 and thus downgraded to gcc11. The reason for using ?= in the
Makefile is to default to gcc11 in the docker image, as those variables
are set in the env.

--- a/compilers/concrete-compiler/compiler/Makefile
+++ b/compilers/concrete-compiler/compiler/Makefile
@@ -14,8 +14,8 @@ Python3_EXECUTABLE?=$(shell which python3)
 BINDINGS_PYTHON_ENABLED=ON
 DATAFLOW_EXECUTION_ENABLED=OFF
 TIMING_ENABLED=OFF
-CC_COMPILER=
-CXX_COMPILER=
+CC_COMPILER?=
+CXX_COMPILER?=
 CUDA_SUPPORT?=OFF
 INSTALL_PREFIX?=$(abspath $(BUILD_DIR))/install
 INSTALL_PATH=$(abspath $(INSTALL_PREFIX))/concretecompiler/
