--- a/docker/Dockerfile.concrete-compiler-env
+++ b/docker/Dockerfile.concrete-compiler-env
@@ -7,6 +7,10 @@ RUN dnf update -y
 RUN dnf install -y ninja-build hwloc-devel ccache ncurses-devel
 RUN dnf install -y openssh-clients graphviz graphviz-devel
 RUN mkdir -p ~/.ssh/ && ssh-keyscan -t ecdsa github.com >> ~/.ssh/known_hosts
+# Setup gcc-11 (required for cuda11.8)
+RUN dnf install -y gcc-toolset-11
+ENV C_COMPILER=/opt/rh/gcc-toolset-11/root/usr/bin/gcc
+ENV CXX_COMPILER=/opt/rh/gcc-toolset-11/root/usr/bin/c++
 # setup ccache with an unlimited amount of files and storage
 RUN ccache -M 0
 RUN ccache -F 0
@@ -24,9 +28,9 @@ RUN ./bootstrap.sh && ./b2 --with-filesystem install
 COPY --from=ghcr.io/zama-ai/hpx:latest /hpx /hpx
 ENV HPX_INSTALL_DIR=/hpx/build
 # Setup CUDA
-COPY --from=ghcr.io/zama-ai/cuda:12-3 /usr/local/cuda-12.3/ /usr/local/cuda-12.3/
-COPY --from=ghcr.io/zama-ai/cuda:12-3 /usr/lib64/libcuda.so* /usr/lib64/
-ENV PATH "$PATH:/usr/local/cuda-12.3/bin"
+COPY --from=ghcr.io/zama-ai/cuda:11-8 /usr/local/cuda-11.8/ /usr/local/cuda-11.8/
+COPY --from=ghcr.io/zama-ai/cuda:11-8 /usr/lib64/libcuda.so* /usr/lib64/
+ENV PATH "$PATH:/usr/local/cuda-11.8/bin"
 # Set the python path. Options: [cp37-cp37m, cp38-cp38, cp39-cp39, cp310-cp310]
 # Links and env would be available to use the appropriate python version
 ARG python_tag=cp38-cp38
