fix(ci): only download wheels into the wheels directory

--- a/.github/workflows/concrete_python_release.yml
+++ b/.github/workflows/concrete_python_release.yml
@@ -236,6 +236,7 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
           path: wheels
+          pattern: wheel-*
           merge-multiple: true
       - uses: actions/download-artifact@v4
         with:
