--- a/docker/Dockerfile.hpx-env
+++ b/docker/Dockerfile.hpx-env
@@ -19,8 +19,8 @@ RUN mkdir build
 # empty HPX_WITH_MAX_CPU_COUNT = dynamic
 # ref https://github.com/STEllAR-GROUP/hpx/blob/1.7.1/CMakeLists.txt#L759
 RUN cd build && cmake \
-	-DCMAKE_C_COMPILER=$(CC_COMPILER) \
-	-DCMAKE_CXX_COMPILER=$(CXX_COMPILER) \
+	-DCMAKE_C_COMPILER=${CC_COMPILER} \
+	-DCMAKE_CXX_COMPILER=${CXX_COMPILER} \
 	-DHPX_WITH_MAX_CPU_COUNT="" \
 	-DHPX_WITH_FETCH_ASIO=on \
 	-DHPX_FILESYSTEM_WITH_BOOST_FILESYSTEM_COMPATIBILITY=ON \
