--- a/.github/workflows/compiler_build_and_test_gpu.yml
+++ b/.github/workflows/compiler_build_and_test_gpu.yml
@@ -47,7 +47,7 @@ jobs:
 
       # A SSH private key is required as some dependencies are from private repos
       - name: Set up SSH agent
-        uses: webfactory/ssh-agent@v0.7.0
+        uses: webfactory/ssh-agent@836c84ec59a0e7bc0eabc79988384eb567561ee2 # v0.7.0
         with:
           ssh-private-key: ${{ secrets.CONCRETE_CI_SSH_PRIVATE }}
 
@@ -58,7 +58,7 @@ jobs:
           echo "SSH_AUTH_SOCK_DIR=$(dirname $SSH_AUTH_SOCK)" >> "${GITHUB_ENV}"
 
       - name: Fetch repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3.6.0
         with:
           submodules: recursive
           token: ${{ secrets.CONCRETE_ACTIONS_TOKEN }}
@@ -70,7 +70,7 @@ jobs:
         run: mkdir build
 
       - name: Build and test compiler
-        uses: addnab/docker-run-action@v3
+        uses: addnab/docker-run-action@4f65fabd2431ebc8d299f8e5a018d79a769ae185 # v3
         id: build-compiler
         with:
           registry: ghcr.io
