--- a/.github/workflows/compiler_macos_build_and_test.yml
+++ b/.github/workflows/compiler_macos_build_and_test.yml
@@ -25,11 +25,11 @@ jobs:
     runs-on: ${{ matrix.runson }}
     steps:
       # A SSH private key is required as some dependencies are from private repos
-      - uses: webfactory/ssh-agent@v0.7.0
+      - uses: webfactory/ssh-agent@836c84ec59a0e7bc0eabc79988384eb567561ee2 # v0.7.0
         with:
           ssh-private-key: ${{ secrets.CONCRETE_CI_SSH_PRIVATE }}
 
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 # v4.1.6
         with:
           submodules: recursive
           token: ${{ secrets.CONCRETE_ACTIONS_TOKEN }}
@@ -45,7 +45,7 @@ jobs:
 
       - name: Cache compilation (push)
         if: github.event_name == 'push'
-        uses: actions/cache@v3
+        uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
         with:
           path: /Users/runner/Library/Caches/ccache
           key: ${{ runner.os }}-${{ runner.arch }}-compilation-cache-${{ github.sha }}
@@ -54,7 +54,7 @@ jobs:
 
       - name: Cache compilation (pull_request)
         if: github.event_name == 'pull_request'
-        uses: actions/cache@v3
+        uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
         with:
           path: /Users/runner/Library/Caches/ccache
           key: ${{ runner.os }}-${{ runner.arch }}-compilation-cache-${{ github.event.pull_request.base.sha }}
