--- a/.github/workflows/concrete_python_checks.yml
+++ b/.github/workflows/concrete_python_checks.yml
@@ -7,7 +7,7 @@ jobs:
   Checks:
     runs-on: ubuntu-20.04
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 # v4.1.6
       - name: Pre-Commit Checks
         run: |
           sudo apt install -y graphviz libgraphviz-dev
