--- a/.github/workflows/linelint.yml
+++ b/.github/workflows/linelint.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 # v4.1.6
       - name: Linelint
         uses: fernandrone/linelint@0.0.4
         id: linelint
