--- a/.github/workflows/start_slab.yml
+++ b/.github/workflows/start_slab.yml
@@ -28,7 +28,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout concrete
-        uses: actions/checkout@v3
+        uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 # v4.1.6
         with:
           fetch-depth: 0
 
@@ -39,7 +39,7 @@ jobs:
           echo "GIT_REF=${{ github.ref_name }}" >> $GITHUB_ENV
 
       - name: Checkout Slab repo
-        uses: actions/checkout@v3
+        uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 # v4.1.6
         with:
           repository: zama-ai/slab
           path: slab
